# ProteinClusterTools

./: .gitattributes  .gitignore  License  README.md  commands_record_LacI  env.yaml  req.txt
analyses/: hierarchical_cluster_plot.ipynb  representative_selection.ipynb  run_pipeline.ipynb  tree_structure.ipynb
analyses/layouts/: mmseqs_137-196-303.csv  mmseqs_137-196-303.pkl
analyses/representatives/: hmm_full_space_reps.fasta  rep_levels.pkl  vector_full_space_reps.fasta  vector_full_space_reps.pkl
analyses/representatives/hmm_picks/: cluster_top_hits.csv  cluster_top_hits.fasta
analyses/representatives/vector_picks/: top_vector_picks.fasta  vector_pick_clusters.csv
analyses/tree_output/: cluster_ancestor_mapping.csv  main_tree.nwk
analyses/tree_output/ITOL/: IDs_label_dataset.txt  Leaf Phylum_colored_ranges_dataset.txt  Leaf Reviewed_highlight_leaf_dataset.txt  Phylum_counts_multibar_dataset.txt  Phylum_counts_multibar_dataset_norm.txt  Phylum_counts_piechart_dataset.txt  Phylum_counts_piechart_dataset_norm.txt  Reviewed_highlight_internal_dataset.txt  Reviewed_highlight_leaf_dataset.txt
analyses/tree_output/subtrees/: 1.nwk  10.nwk  100.nwk  101.nwk  102.nwk  103.nwk  104.nwk  105.nwk  106.nwk  107.nwk  (+464 more)
data/: IPR001761_with_taxonomy.tsv  process_table.ipynb
package/: License  README.md  pyproject.toml
package/protssn/: pipeline.py
package/protssn/layout/: circle_collision.py  circle_layout_tools.py  draw_circles.py
package/protssn/tools/: esm_extract.py  esm_wrapper.py  hierarchical_clustering.py  hmm_cluster_rep.py  sanitize_fasta_headers.py
package/protssn/visuals/: annotate.py  circle_plot.py
package/src/proteinclustertools/: pipeline.py
package/src/proteinclustertools/layout/: circle_layout_tools.py
package/src/proteinclustertools/tools/: cluster_merging.py  cluster_stream.py  esm_wrapper.py  hierarchical_clustering.py  hmm_cluster_rep.py  kmeans.py  mmseqs_wrapper.py  sanitize_fasta_headers.py  summarize_distribution.py  vector_cluster_rep.py
package/src/proteinclustertools/visuals/: annotate.py  circle_plot.py  tree_utils.py
(+154 files in other folders)
