[project]
name = "protssn"
version = "0.0.1"
authors = [
  { name="John Chen", email="jo.chn.93@gmail.com" },
]
description = "Pipeline for clustering protein sequences in large scale datasets, using homology or pLM representation."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"