[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ProteinClusterTools"
version = "1.0"
authors = [
  { name="John Chen", email="jo.chn.93@gmail.com" },
]
description = "Pipeline for clustering protein sequences in large scale datasets, using homology or pLM representation."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"